Fix path-based import and clarify string vs symbol for import
- Path import bug: (import "path/to/file.rye") looked up the path string
  in the registry, but the file only registers under (module name ...).
  Register an alias from the normalized absolute path to that module so
  path-based imports find the module. Use absolute paths so the same
  file imported with different path strings (e.g. "a.rye" vs "./a.rye")
  reuses one loaded module.

- Rule: (import X) with a symbol treats X as module name (stdlib, then
  CWD). (import "path") with a string treats it as a file path
  (path-only resolution, no stdlib). Removes ambiguity where a string
  could be interpreted as either.

- Add ModuleRegistry$alias(path, name). When (module name ...) runs
  during a file load, alias the current source path (normalized to
  absolute) to that module. Add rye_resolve_path_only() and
  rye_normalize_path_absolute() in utils.R.

- Tests: path import and attach, second path import no reload, symbol vs
  string behavior, same file with different path strings reuses module.
  Update modules vignette and help (import) to document the rule.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
-o) can you "import" without first running "load" to define the module? looks like no, which is a bit broken
-o) can we import arbitrary non-stdlib modules? does import work for this?
-o) may be able to get rid of the stdlib "loader"?
+o) any of the utils.R functions that properly belong as a method of a class?
+
+o) can we use fix above to get rid of the stdlib "loader"?
 
 o) fix the minor issues from opus auditing the tests
 
