Move rye_env_registry and rye_error to R6 classes
- Add RyeEnv$get_registry(name, env = NULL, create = TRUE) and use it
  from macro_registry_env, module_registry_env, RyeEngine, and
  MacroExpander; remove rye_env_registry from utils.R.
- Add SourceTracker$create_error(message, src_stack, r_stack) and use
  it in with_error_context; remove rye_error from utils.R.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-o) any of the utils.R functions that properly belong as a method of a class?
-
-o) can we use fix above to get rid of the stdlib "loader"?
+o) can we use the import fixes to get rid of the stdlib "loader"?
 
 o) fix the minor issues from opus auditing the tests
 
