Replace _stdlib_loader w/ R-side stdlib loading
- Add rye_topsort() and tests (R/topological-sort.R,
  test-topological-sort.R) for reusable DAG topological sort.
- Add StdlibDeps R6 class (R/stdlib-deps.R) to scan inst/rye, parse
  (module ...)/(import ...), and use topsort for load order; expose
  get_load_order(), get_modules(), get_graph(), check_undeclared().
- RyeEngine: add load_stdlib_into_env(env), use it in
  initialize_environment() instead of (load "_stdlib_loader"); make it
  idempotent (skip load if module already in target registry).
- Test helper stdlib_env() calls engine$load_stdlib_into_env(); when env
  is NULL, return engine env as-is (stdlib already loaded at init).
- Remove inst/rye/_stdlib_loader.rye.
- Make tools/stdlib-deps.R a thin wrapper calling
  rye:::rye_stdlib_print_order* and add Makefile targets stdlib-order,
  stdlib-check.
- Update test-stdlib-deps.R to use StdlibDeps, AGENTS.md and vignettes
  for new loading model.

--- a/vignettes/stdlib-reference.Rmd
+++ b/vignettes/stdlib-reference.Rmd
@@ -109,10 +109,10 @@ engine <- RyeEngine$new()
 ## Source mapping
 
 The base R parts of the stdlib implementation live in `R/stdlib.R`. The rye
-parts are organized by topic in `inst/rye/` (each file defines a module):
+parts are organized by topic in `inst/rye/` (each file defines a module). The
+engine loads these modules in dependency order when initializing.
 
 - `_r.rye` (R operator/function aliases, internal)
-- `_stdlib_loader.rye` (loads modules in dependency order)
 - `core.rye`
 - `list.rye`
 - `predicates.rye`
