--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-o) fix the minor issues from opus auditing the tests
+test audits:
+-------------------------------------------------
+o) fix the minor issues found last time from opus auditing the tests
 
 o) have opus audit the tests again:
 ```
@@ -6,6 +8,7 @@ Take a look at the tests in tests/, maybe especially the native ones in tests/na
 
 Given that, let's critique these tests. Is there any behavior they implement that they clearly shouldn't? Mistaken behavior of the interpreter we have now that's been hardcoded into the tests? You're looking for things that clearly don't make sense and aren't how an R-based lisp should behave. Use your judgment!
 ```
+or similar
 
 performance issues:
 -------------------------------------------------
@@ -18,7 +21,9 @@ o) the evaluator is a dynamic, recursive AST walker and creates way too many sta
 
 o) other performance optimizations: use profiling and benchmarking
 
-o) documentation updates / systematizing: make a plan
+documentation updates:
+-------------------------------------------------
+o) update / systematics docs: make a plan
 
 small stuff:
 --------------------------------------
