--- a/vignettes/macros.Rmd
+++ b/vignettes/macros.Rmd
@@ -95,6 +95,8 @@ engine$eval(engine$read("(defmacro when (test body) \"Evaluate body when test is
 engine$macroexpand(engine$read("(when #t 1)")[[1]])
 ```
 
+To see both the macro-expanded form and the compiled R code (e.g. for debugging), use `engine$inspect_compilation(text, env)`. It returns a list with `parsed`, `expanded`, `compiled`, and `compiled_deparsed` (the R source as a character vector). See `?RyeEngine` for details.
+
 To expand only one level, use `macroexpand-1` from Rye code:
 
 ```lisp
