--- a/TODO
+++ b/TODO
@@ -1,33 +1,52 @@
 performance issues:
 -------------------------------------------------
-o) main perf bottleneck: evaluator is a dynamic, recursive AST walker. per rye
-   call, it creates way too many stack frames and does way too much
-   evaluation-time work. to fix this, we want to add an AST-to-R compiler and
-   replace the evaluator with just a call to base::eval(). this means our
-   overhead is all at macroexpansion + transpilation time and stacks are
-   shorter / recursion can safely be deeper (depth is determined by the depth
-   of the AST, not the runtime call graph). there's of course still evaluation
-   but R's eval() is in C and is highly optimized, much more efficient than
-   anything we could possibly do
-
-o) still some missing compiler features and failing tests
-o) eliminate the current evaluator entirely
-
-o) recursion-related FIXMEs (reenable some code) in benchmarks after evaluator
-   improvements
+o) check that the benchmarks run correctly and run/commit bench/profile
 
 o) should we inject helpers into the environment rather than the generated
    scripts themselves? pros of environment: slightly faster. maybe more robust.
    cons: compiled programs aren't self-contained. (but would they be anyway?)
 
-o) further speedups:
-    o) caching in the compiler? or write compiled files a la __pycache__?
-    o) probably room to further optimize the generated expressions
-
 o) compiler vignette
-o) where in here do we expose things user code can modify and break compilation?
-o) have opus or some such critique the architecture and make suggestions
 
+o) where in here do we expose things user code can modify and break compilation?
+
+o) should we write any of these compiled versions to disk a la __pycache__?
+o) probably room to further optimize the generated expressions
+
+compiler opt ideas
+  1. Macro expansion cache
+
+  - Key: (expr, env macro registry version)
+  - Value: expanded AST + src metadata
+  - Big wins for repeated macro-heavy code and module loads.
+
+  2. Compile cache
+
+  - Key: (expanded AST, env/compiler options)
+  - Value: compiled R expression
+  - Useful for REPL, repeated evaluations, and stdlib module loads.
+
+  3. Module load cache
+
+  - Already partly present, but could cache compiled bodies per module file hash to skip parse/expand/compile on repeated loads.
+
+  4. Constant folding & literal hoisting
+
+  - Precompute pure literal calls (e.g., (+ 1 2)) and hoist immutable literals into temps.
+
+  5. Function body compilation memoization
+
+  - Cache compiled bodies for lambdas created from identical source to reduce closure compilation overhead in macro expansions.
+
+  11. Inline simple runtime helpers
+
+  - For tiny helpers (.rye_true_p, etc.) to reduce call overhead.
+
+  12. Specialized fast paths for hot forms
+
+  - if, begin, and/or, lambda bodies compiled into more direct R idioms.
+
+o) have opus or some such critique the architecture and make suggestions
 o) other performance optimizations: use profiling and benchmarking
 
 test audits:
@@ -58,3 +77,4 @@ small stuff:
 --------------------------------------
 o) minor pkgdown warning about site url
 o) run lints and coverage, see what to do
+
